# newmedia

./: .gitignore  CMakeLists.txt  DeviceCfg.json  Makefile  application.xml  config.admin  config.grid  config.mediaclient  config.mediaserver  media.vcxproj  media.vcxproj.filters  packages.config
src/: RTPSender.h  ReadMe.txt  buffer.cpp  buffer.h  media.h  mediastream.cpp  mediastream.h  message.h  packetsender.h  psheader.h  stream.cpp  threadpool.h
src/hkdevice/: LoginOperatoin.cpp  LoginOperatoin.h  PtzControl.h  SdkUsers.h  camara.cpp  hikcontroller.cpp  hikcontroller.h  hkdevice.vcxproj
src/hkdevice/incCn/: HCNetSDK.h
src/hksdk/include/: HCNetSDK.h
src/pub/: catalog.h  utility.h
